# BotCAPTCHA

./: .gitignore  CLAUDE.md  CONFIG_GUIDE.md  CONTEXT.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  config.toml
puzzleTest/: .env.example  .gitignore  QUICKSTART.md  README.md  TROUBLESHOOTING.md  agent.py  check_screenshot.py  config.py  debug_output.json  debug_test.py  install_dependencies.sh  main.py  quick_test.py  requirements.txt  screenshot.py  setup.sh  test_perfect_submission.py  vision.py  visualize_boxes.py
src/: config.rs  handlers.rs  main.rs  models.rs  utils.rs
static/: app.js  embed-demo.html  index.html  widget.js
